# esp32-idf-sources-base

./: CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  main.c
main/app/: app.cpp  app.h  app_data.h  app_log.h  task_cloud.cpp  task_cloud.h  task_console.cpp  task_console.h  task_list.cpp  task_list.h  task_system.cpp  task_system.h
main/fa/: README.md  fa.c  fa.h
main/modules/: cmd_line.c  cmd_line.h  modules_inc.h
main/sys/: mqtt_conn.c  mqtt_conn.h  sys_boot.c  sys_boot.h  sys_inc.h  sys_log.h  sys_periphs.c  sys_periphs.h  sys_soft.c  sys_soft.h
